again micropatch to to correctly render hero section on mobiles

--- a/Styles/main/_hero_section.scss
+++ b/Styles/main/_hero_section.scss
@@ -77,6 +77,7 @@
 @media screen and (orientation: portrait){
     @media screen and (max-width: 1024px) {
         .hero_section{
+            margin-top: 0px;
             h1{
                 font-size: 2rem;
                 line-height: 2.5rem;
