--- a/Styles/main_dark.css
+++ b/Styles/main_dark.css
@@ -1112,6 +1112,9 @@ svg {
 }
 
 @media screen and (orientation: portrait) and (max-width: 1024px) {
+  .hero_section {
+    margin-top: 0px;
+  }
   .hero_section h1 {
     font-size: 2rem;
     line-height: 2.5rem;
